fix align on main article text

--- a/css/style.css
+++ b/css/style.css
@@ -176,23 +176,15 @@ nav li {
   border: solid 1px black;
   height: 100%;
   justify-content: space-between;
+  padding: 1em;
 }
 
 .article-container .top {
   width: 100%;
-  border: solid 1px yellow;
-}
-
-.article-container .bottom {
-  border: solid 1px red;
-}
-
-.article-container .top .logo-article {
-  border: solid 1px green;
 }
 
 .article-container .top .date-article {
-  border: solid 1px red;
+  margin-left: auto;
 }
 
 .sub-article {
